backing up before nuke

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -3,7 +3,7 @@
 preload = /home/andrew/Pictures/Wallpapers/rose_pine_shape.png
 preload = /home/andrew/Pictures/Wallpapers/rose_pine_shape_flip.png
 # Set wallpaper for Monitor 1
-wallpaper = DP-1,/home/andrew/Pictures/Wallpapers/rose_pine_shape.png
+wallpaper = HDMI-A-1,/home/andrew/Pictures/Wallpapers/rose_pine_shape.png
 # Set wallpaper for Monitor 2
 wallpaper = HDMI-A-2,/home/andrew/Pictures/Wallpapers/rose_pine_shape_flip.png
 
