--- a/.config/hypr/conf/keybindings.conf
+++ b/.config/hypr/conf/keybindings.conf
@@ -13,6 +13,7 @@ bind = $mainMod, F6, exec, hyprshade off
 # bind =, F8, exec, /opt/vivaldi/vivaldi --profile-directory=Default --app-id=cinhimbnkkaeohfgghhklpknlkffjgod # Youtube Music PWA
 bind =, F5, exec, /opt/vivaldi/vivaldi --profile-directory=Default --app-id=pkooggnaalmfkidjmlhoelhdllpphaga # Outlook PWA
 bind = $mainMod, N, exec, thunar
+bind = $mainMod, R, exec, rustdesk
 bind = $mainMod SHIFT, X, exec, hyprlock
 bind = $mainMod SHIFT, N, exec, swaync-client -t -sw
 bind = $mainMod SHIFT, P, exec, nwg-bar
@@ -35,12 +36,13 @@ bind = $mainMod, down, movefocus, d
 bind = $mainMod, Tab, cyclenext
 
 # Bind Workspace to monitors
-workspace=1,monitor:DP-3
-workspace=2,monitor:DP-2
-workspace=3,monitor:DP-2
-workspace=4,monitor:DP-2
-workspace=5,monitor:DP-2
-workspace=6,monitor:DP-2
+workspace=1,monitor:DP-2
+workspace=2,monitor:DP-3
+workspace=3,monitor:DP-3
+workspace=4,monitor:DP-3
+workspace=5,monitor:DP-3
+workspace=6,monitor:DP-3
+workspace=7,monitor:DP-3
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -49,6 +51,7 @@ bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
 bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
@@ -57,6 +60,7 @@ bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
 bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
 bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
 bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
 
 # Resize windows mainMod + SHIFT + arrow keys
 binde = $mainMod SHIFT, right, resizeactive, 20 0
