--- a/.config/hypr/conf/windows.conf
+++ b/.config/hypr/conf/windows.conf
@@ -16,10 +16,10 @@ dwindle {
     preserve_split = yes # you probably want this
     }
 
-master {
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-    }
+# master {
+# # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+#     new_is_master = true
+#     }
 
 
 # Window Rules
@@ -33,6 +33,7 @@ windowrulev2 = tile,class:(Vivaldi-stable) # Tile all instances of Vivaldi
 windowrulev2 = tile,class:(steam_proton) # Tile all instances of Chemcraft.exe
 windowrulev2 = tile,class:(iboview.exe) # Tile all instances of iboview.exe
 windowrulev2 = tile,class:(MATLAB R2024a - academic use) # Tile all instances of Matlab
+windowrulev2 = workspace 7, title,class:(rustdesk), title:(486247136@mit-nitrogen - Remote Desktop - RustDesk)
 windowrulev2 = float,class:(iboview.exe),title:(Open File) # Float all instances of iboview.exe with the title Open File
 windowrulev2 = float,class:(thunar),title:(File Operation Progress)
 windowrulev2 = float,size 360 266,class:(Gview.exe) # Float all instances of Gview.exe
